Fix match spell icon overlap

--- a/app/src/styles/main.scss
+++ b/app/src/styles/main.scss
@@ -784,8 +784,8 @@ select {
 .participant-row__identity {
   position: relative;
   display: grid;
-  grid-template-columns: 42px minmax(0, 1fr);
-  gap: 9px;
+  grid-template-columns: 42px 18px minmax(0, 1fr);
+  gap: 7px;
   align-items: center;
   min-width: 0;
   border: 0;
@@ -829,12 +829,10 @@ select {
 }
 
 .participant-spells {
-  position: absolute;
-  left: 30px;
-  bottom: -1px;
   display: grid;
-  grid-template-columns: repeat(2, 17px);
+  grid-template-rows: repeat(2, 17px);
   gap: 2px;
+  align-self: center;
 
   img,
   span {
